--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
+#  flutter_localizations:
+#    sdk: flutter
   flutter_form_builder:
     path: ../
   widget_with_codeview: ^1.0.3
@@ -21,7 +21,7 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  intl_translation:
+#  intl_translation:
 
 flutter:
   uses-material-design: true
